--- a/index.css
+++ b/index.css
@@ -1,47 +1,52 @@
 body {
     background-image: url(background.jpg);
     background-repeat: no-repeat;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    display: grid;
+    font-size: 16px;
+    text-align: center;
 }
-
+@media (max-width:400px){body{font-size: 5px;}}
 #counterh1 {
     color: antiquewhite;
     text-align: center;
     margin-top: 50px;
     width: auto;
-    font-size: 80px;
+    font-size: 4em;
 }
 
 #countel {
     color: antiquewhite;
-    font-size: 40px;
-    text-align: center;
+    font-size: 2.5em;
 }
 
 #style {
-    text-align: center;
+    margin: 15px;
 }
 
 #incrementbtn {
-    text-align: center;
-    display: inline-block;
-    font-size: 30px;
+    font-size: 2em;
+    margin: 10px;
 }
 
 #decrementbtn {
-    text-align: center;
-    display: inline-block;
-    font-size: 30px;
+    font-size: 2em;
+    margin: 10px;
 }
 
 #savebtn {
-    text-align: center;
     margin: auto;
-    display: grid;
-    font-size: 30px;
+    font-size: 2em;
+
 }
 
 #saveel {
-    text-align: center;
     color: azure;
-    font-size: 25px;
+    font-size: 2em;
+}
+
+.container {
+    width: 90%;
+    margin: 2vh auto;
 }
