--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     font-size: 16px;
     text-align: center;
 }
-@media (max-width:50px){body{font-size: 5px;}}
+@media (min-width:50px){body{font-size: 5px;}}
 #counterh1 {
     color: antiquewhite;
     text-align: center;
